--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "express": "^4.17.1",
     "nuxt": "^2.0.0",
     "vue-i18n": "^8.18.2",
     "vuelidate": "^0.7.5"
