--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nuxt": "^2.0.0",
     "vue-i18n": "^8.18.2",
