--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/firebase": "^6.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.15.0",
+    "firebase-admin": "^8.10.0",
     "nuxt": "^2.0.0",
     "vue-i18n": "^8.18.2",
-    "vuelidate": "^0.7.5"
+    "vuelidate": "^0.7.5",
+    "vuex-map-fields": "^1.4.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
