--- a/app.yml
+++ b/app.yml
@@ -6,7 +6,7 @@ handlers:
     secure: always  
   - url: /(.*\.(gif|png|jpg|ico|txt))$
     static_files: static/\1
-    upload: static/.*\.(gif|png|jpg|ico|txt)$
+    upload: static/.*\.(gif|png|jpg|ico|txt|js)$
     secure: always  
   - url: /.*
     script: auto
