--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.15.0",
     "firebase-admin": "^8.10.0",
     "nuxt": "^2.0.0",
     "vue-i18n": "^8.18.2",
-    "vuelidate": "^0.7.5",
-    "dotenv": "^8.2.0",
-    "vuex-map-fields": "^1.4.0"
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
